force-app/main/default/objects/Daily_Log__c/fields/Normal_call_percent__c.field-meta.xml
<CustomField>
    <fullName>Normal_call_percent__c</fullName>
    <formula>IF (TC__c =0, 0,  Total_Normal_Call__c  / TC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normal call percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>