force-app/main/default/objects/Daily_Log__c/fields/Other_Plan__c.field-meta.xml
<CustomField>
    <fullName>Other_Plan__c</fullName>
    <label>Other Plan</label>
    <type>TextArea</type>
</CustomField>