force-app/main/default/objects/Daily_Log__c/fields/Outlets_Not_Visited__c.field-meta.xml
<CustomField>
    <fullName>Outlets_Not_Visited__c</fullName>
    <formula>Total_Outlets__c -  Total_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlets Not Visited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>