force-app/main/default/objects/Daily_Log__c/fields/Owner_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email_Id__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Email Id</label>
    <type>Text</type>
</CustomField>