force-app/main/default/objects/Daily_Log__c/fields/Owner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Email__c</fullName>
    <formula>Owner:User.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager Email</label>
    <type>Text</type>
</CustomField>