force-app/main/default/objects/Daily_Log__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>