force-app/main/default/objects/Daily_Log__c/fields/Owner_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_User_Name__c</fullName>
    <formula>Owner:User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee User Name</label>
    <type>Text</type>
</CustomField>