force-app/main/default/objects/Daily_Log__c/fields/Pay_Roll__c.field-meta.xml
<CustomField>
    <fullName>Pay_Roll__c</fullName>
    <formula>TEXT(Owner:User.Payroll__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Roll</label>
    <type>Text</type>
</CustomField>