force-app/main/default/objects/Daily_Log__c/fields/PC__c.field-meta.xml
<CustomField>
    <fullName>PC__c</fullName>
    <formula>Total_Productive_Calls_Made__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>