force-app/main/default/objects/Daily_Log__c/fields/PJP_PC__c.field-meta.xml
<CustomField>
    <fullName>PJP_PC__c</fullName>
    <formula>IF(Total_Outlets__c ==0 ,0, Total_Productive_Calls__c/ Total_Outlets__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PJP PC %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>