force-app/main/default/objects/Daily_Log__c/fields/Present__c.field-meta.xml
<CustomField>
    <fullName>Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Present</label>
    <type>Checkbox</type>
</CustomField>