force-app/main/default/objects/Daily_Log__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permission Type</label>
    <type>Text</type>
</CustomField>