force-app/main/default/objects/Daily_Log__c/fields/Prouctive_Calls_Made__c.field-meta.xml
<CustomField>
    <fullName>Prouctive_Calls_Made__c</fullName>
    <formula>IF(Total_No_of_Outlets__c ==0 ,0,  Total_Productive_Calls_Made__c /  Total_No_of_Beat_Non_PJP_Order__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productive Calls Made %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>