force-app/main/default/objects/Daily_Log__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Today&apos;s Work Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purpose_of_Visit</valueSetName>
    </valueSet>
</CustomField>