force-app/main/default/objects/Daily_Log__c/fields/Reporting_Manager_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_Employee_Code__c</fullName>
    <formula>Owner:User.Manager.Employee_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager Employee Code</label>
    <type>Text</type>
</CustomField>