force-app/main/default/objects/Daily_Log__c/fields/Reporting_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_Name__c</fullName>
    <formula>Owner:User.Manager.FirstName +&apos; &apos; +Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager Name</label>
    <type>Text</type>
</CustomField>