force-app/main/default/objects/Daily_Log__c/fields/RSM_Name__c.field-meta.xml
<CustomField>
    <fullName>RSM_Name__c</fullName>
    <formula>Owner:User.RSM_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM Name</label>
    <type>Text</type>
</CustomField>