force-app/main/default/objects/Daily_Log__c/fields/Sales_App_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_App_Id__c</fullName>
    <externalId>true</externalId>
    <label>Sales App Id</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>