force-app/main/default/objects/Daily_Log__c/fields/Secondary_Order_Amont__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Order_Amont__c</fullName>
    <label>Secondary Order Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>