force-app/main/default/objects/Daily_Log__c/fields/Stock_Calls__c.field-meta.xml
<CustomField>
    <fullName>Stock_Calls__c</fullName>
    <label>Stock Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>