force-app/main/default/objects/Daily_Log__c/fields/TC__c.field-meta.xml
<CustomField>
    <fullName>TC__c</fullName>
    <formula>Total_Calls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>