force-app/main/default/objects/Daily_Log__c/fields/Telephonic_Call__c.field-meta.xml
<CustomField>
    <fullName>Telephonic_Call__c</fullName>
    <label>PJP Telephonic Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>