force-app/main/default/objects/Daily_Log__c/fields/TLSD__c.field-meta.xml
<CustomField>
    <fullName>TLSD__c</fullName>
    <label>TLSD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>