force-app/main/default/objects/Daily_Log__c/fields/TLSD_Primary__c.field-meta.xml
<CustomField>
    <fullName>TLSD_Primary__c</fullName>
    <label>TLSD Primary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>