force-app/main/default/objects/Daily_Log__c/fields/TLSD_Retailers_Outlets__c.field-meta.xml
<CustomField>
    <fullName>TLSD_Retailers_Outlets__c</fullName>
    <label>TLSD Retailers Outlets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>