force-app/main/default/objects/Daily_Log__c/fields/TLSD_Sub_Stockist__c.field-meta.xml
<CustomField>
    <fullName>TLSD_Sub_Stockist__c</fullName>
    <label>TLSD_Sub_Stockist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>