force-app/main/default/objects/Daily_Log__c/fields/Today_Day_Travelled_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Today_Day_Travelled_Distance_KM__c</fullName>
    <formula>KMs_Travelled__c + Last_visit_distance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Travelled Distance(KM) Google</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>