force-app/main/default/objects/Daily_Log__c/fields/Todays_Plan__c.field-meta.xml
<CustomField>
    <fullName>Todays_Plan__c</fullName>
    <label>Today&apos;s Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Todays_Plan</valueSetName>
    </valueSet>
</CustomField>