force-app/main/default/objects/Daily_Log__c/fields/Total_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Calls__c</fullName>
    <formula>Total_Visits__c + Non_PJP_Order_Calls__c +  Unique_Visit_form_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Calls Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>