force-app/main/default/objects/Daily_Log__c/fields/Total_No_of_Beat_Non_PJP_Order__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Beat_Non_PJP_Order__c</fullName>
    <formula>Total_Outlets__c + No_Of_Outlets_from_Non_PJP_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No of Beat &amp; Non PJP Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>