force-app/main/default/objects/Daily_Log__c/fields/Total_Normal_Call__c.field-meta.xml
<CustomField>
    <fullName>Total_Normal_Call__c</fullName>
    <formula>Normal_Call__c + Non_PJP_Normal_Calls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Normal Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>