force-app/main/default/objects/Daily_Log__c/fields/Total_Outlets__c.field-meta.xml
<CustomField>
    <fullName>Total_Outlets__c</fullName>
    <label>No Of Outlets from Beat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>