force-app/main/default/objects/Daily_Log__c/fields/Total_Productive_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Productive_Calls__c</fullName>
    <label>PJP PC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>