force-app/main/default/objects/Daily_Log__c/fields/Total_Productive_Calls_Made__c.field-meta.xml
<CustomField>
    <fullName>Total_Productive_Calls_Made__c</fullName>
    <formula>Total_Productive_Calls__c + Non_PJP_Productive_Calls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Productive Calls Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>