force-app/main/default/objects/Daily_Log__c/fields/Total_Telephonic_Call__c.field-meta.xml
<CustomField>
    <fullName>Total_Telephonic_Call__c</fullName>
    <formula>Non_PJP_Telephonic_Calls__c + Telephonic_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Telephonic Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>