force-app/main/default/objects/Daily_Log__c/fields/Total_Visit_form_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Visit_form_Calls__c</fullName>
    <label>Total Visit form Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>