force-app/main/default/objects/Daily_Log__c/fields/Total_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Working_Hours__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Day_started_time__c)),
    NOT(
      ISBLANK(
        IF(Is_System_Ended__c, Last_Visit_Date_and_Time__c, Day_ended_time__c)
      )
    )
  ),
  TEXT(
    FLOOR(
      (IF(Is_System_Ended__c, Last_Visit_Date_and_Time__c, Day_ended_time__c) - Day_started_time__c) * 24
    )
  ) &amp; &quot; hrs &quot; &amp;
  TEXT(
    ROUND(
      MOD(
        (IF(Is_System_Ended__c, Last_Visit_Date_and_Time__c, Day_ended_time__c) - Day_started_time__c) * 1440,
        60
      ),
      0
    )
  ) &amp; &quot; mins&quot;,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance_Time</label>
    <type>Text</type>
</CustomField>