force-app/main/default/objects/Daily_Log__c/fields/TPut_Per_OL__c.field-meta.xml
<CustomField>
    <fullName>TPut_Per_OL__c</fullName>
    <formula>IF(Total_Productive_Calls__c == 0 ,0,  Total_Order_Amount__c / Total_Productive_Calls__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPut_Per_OL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>