force-app/main/default/objects/Daily_Log__c/fields/Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Type__c</fullName>
    <label>Travel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Travel_Type</valueSetName>
    </valueSet>
</CustomField>