force-app/main/default/objects/Daily_Log__c/fields/Unique_Visit_form_Visits__c.field-meta.xml
<CustomField>
    <fullName>Unique_Visit_form_Visits__c</fullName>
    <label>Unique Visit form Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>