force-app/main/default/objects/Daily_Log__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <formula>Owner:User.Employee_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Id</label>
    <type>Text</type>
</CustomField>