force-app/main/default/objects/Daily_Log__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipName>Daily_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>