force-app/main/default/objects/Daily_Log__c/fields/Visit_Form_Total_Calls__c.field-meta.xml
<CustomField>
    <fullName>Visit_Form_Total_Calls__c</fullName>
    <formula>Total_Visit_form_Calls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Form Total Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>