force-app/main/default/objects/Daily_Log__c/fields/Visit_Form_Unique_Calls__c.field-meta.xml
<CustomField>
    <fullName>Visit_Form_Unique_Calls__c</fullName>
    <formula>Unique_Visit_form_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Form Unique Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>