force-app/main/default/objects/Daily_Log__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Visit_Type</valueSetName>
    </valueSet>
</CustomField>