force-app/main/default/objects/Daily_Log__c/fields/Worked_Beat_Name__c.field-meta.xml
<CustomField>
    <fullName>Worked_Beat_Name__c</fullName>
    <formula>Current_Beat__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worked Beat Name</label>
    <type>Text</type>
</CustomField>