force-app/main/default/objects/Daily_Log__c/fields/Working_Hours_For_Expense__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_For_Expense__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Day_started_time__c)),
        NOT(
            ISBLANK(
                IF(
                    Is_System_Ended__c,
                    IF(
                        AND(NOT(ISBLANK(Last_Visit_Date_and_Time__c)), NOT(ISBLANK(Last_Visit_Form_Visit_Time__c))),
                        IF(Last_Visit_Date_and_Time__c &gt; Last_Visit_Form_Visit_Time__c, Last_Visit_Date_and_Time__c, Last_Visit_Form_Visit_Time__c),
                        IF(NOT(ISBLANK(Last_Visit_Date_and_Time__c)), Last_Visit_Date_and_Time__c, Last_Visit_Form_Visit_Time__c)
                    ),
                    Day_ended_time__c
                )
            )
        )
    ),
    ROUND(
        (
            IF(
                Is_System_Ended__c,
                IF(
                    AND(NOT(ISBLANK(Last_Visit_Date_and_Time__c)), NOT(ISBLANK(Last_Visit_Form_Visit_Time__c))),
                    IF(Last_Visit_Date_and_Time__c &gt; Last_Visit_Form_Visit_Time__c, Last_Visit_Date_and_Time__c, Last_Visit_Form_Visit_Time__c),
                    IF(NOT(ISBLANK(Last_Visit_Date_and_Time__c)), Last_Visit_Date_and_Time__c, Last_Visit_Form_Visit_Time__c)
                ),
                Day_ended_time__c
            )
            - Day_started_time__c
        ) * 24,
        2
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Hours (For Expense)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>