force-app/main/default/objects/Daily_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Day_Odometer_Reading_KM__c</columns>
    <columns>Purpose_of_Visit__c</columns>
    <columns>Travel_Type__c</columns>
    <columns>Day_started_time__c</columns>
    <columns>Date__c</columns>
    <columns>Day_ended_time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Distance_Travelled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Today_Day_Travelled_Distance_KM__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>