force-app/main/default/objects/Daily_Log__c/listViews/Copy_of_This_Month.listView-meta.xml
<ListView>
    <fullName>Copy_of_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Purpose_of_Visit__c</columns>
    <columns>Travel_Type__c</columns>
    <columns>Start_Day_Odometer_Reading_KM__c</columns>
    <columns>Clock_In_Location__Latitude__s</columns>
    <columns>Clock_In_Location__Longitude__s</columns>
    <columns>Date__c</columns>
    <columns>Day_started_time__c</columns>
    <columns>Clock_Out_Location__Longitude__s</columns>
    <columns>Clock_Out_Location__Latitude__s</columns>
    <columns>Day_ended_time__c</columns>
    <columns>Is_System_Ended__c</columns>
    <columns>Working_Hours_For_Expense__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Last Month</label>
</ListView>