force-app/main/default/objects/Daily_Log__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Start_Day_Odometer_Reading_KM__c</columns>
    <columns>Day_ended_time__c</columns>
    <columns>Distance_Salesforce__c</columns>
    <columns>Is_System_Ended__c</columns>
    <columns>Last_Visit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>